Make extension simpler, one button, no settings

--- a/popup/info.html
+++ b/popup/info.html
@@ -10,10 +10,9 @@
 <body>
   <img src="../icons/logo_banner.png" alt="logo">
   <div class="content-row">
-    <a class="github-button" href="https://github.com/Malo196/JiraSnippet"
+    <a class="github-button" href="https://github.com/PavelStefanov/JiraSnippet"
       data-color-scheme="no-preference: light; light: light; dark: dark_high_contrast;"
-      aria-label="Visit @Malo196 on GitHub">Source Code</a>
-    <a class="settings-button" id="settings-button" href="../settings/settings.html" target="_blank">&#9881;</a>
+      aria-label="Visit @PavelStefanov on GitHub">Source Code</a>
   </div>
 </body>
 </html>
